catkin_w_s/logs/control_scripts/build.make.065.log.stderr
/home/subho/catkin_w_s/src/control_scripts/src/scripts/loiter_node.cpp: In constructor ‘Loiter::Loiter(int)’:
/home/subho/catkin_w_s/src/control_scripts/src/scripts/loiter_node.cpp:71:71: error: invalid use of non-static member function ‘void Loiter::state_cb(const State&)’
   71 |     state_sub = nh.subscribe<mavros_msgs::State>("/mavros/state", 10, state_cb);
      |                                                                       ^~~~~~~~
In file included from /home/subho/catkin_w_s/src/control_scripts/src/scripts/loiter_node.cpp:1:
/home/subho/catkin_w_s/src/control_scripts/include/control_scripts/loiter_node.hpp:28:14: note: declared here
   28 |         void state_cb(const mavros_msgs::State&);
      |              ^~~~~~~~
make[2]: *** [CMakeFiles/control_scripts.dir/build.make:76: CMakeFiles/control_scripts.dir/src/scripts/loiter_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:238: CMakeFiles/control_scripts.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
